// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<View
  aspectRatio={1.5}
>
  <ImageBackground
    onLoad={[Function]}
    source={
      Object {
        "uri": "http://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</View>
`;

exports[`2. Renders default layout without uri 1`] = `
<View
  aspectRatio={1.5}
>
  <ImageBackground
    onLoad={[Function]}
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</View>
`;

exports[`3. Renders with a passed style prop 1`] = `
<View
  aspectRatio={1.5}
  style={
    Object {
      "width": 100,
    }
  }
>
  <ImageBackground
    onLoad={[Function]}
    source={
      Object {
        "uri": "http://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</View>
`;

exports[`4. Renders a placeholder 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Gradient
    degrees={264}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Svg
        height={82.23350253807106}
        version="1.1"
        width={82.23350253807106}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
</View>
`;

exports[`5. Renders with prepended https schema 1`] = `
<View
  aspectRatio={1.5}
>
  <ImageBackground
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</View>
`;
